Alignment issue resolve

--- a/csscode/sty.css
+++ b/csscode/sty.css
@@ -29,6 +29,7 @@ a:active {
 
 .content {
       width: 94%;
+      padding-top: 5%;
       margin: 4em auto;
       font-size: 18px;
       line-height: 35px;
